// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Audit Detailspage tests should render full Detailspage 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: start;
  justify-content: start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c18 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c22 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c23 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.c25 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
}

.c26 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c28 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
}

.c31 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c33 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
}

.c9 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c4 {
  margin-left: -10px;
}

.c4>* {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c4>* {
  margin-left: 10px;
}

.c6 {
  margin-left: -5px;
}

.c6>* {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c6>* {
  margin-left: 5px;
}

.c3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c10 {
  cursor: pointer;
}

.c11 svg path {
  fill: #bfbfbf;
}

.c8 {
  height: 16px;
  width: 16px;
  line-height: 16px;
}

.c8 * {
  height: inherit;
  width: inherit;
}

.c20 {
  height: 50px;
  width: 50px;
  line-height: 50px;
}

.c20 * {
  height: inherit;
  width: inherit;
}

.c15 {
  margin: 10px 0px;
  padding-bottom: 1px;
  border-bottom: 2px solid #e5e5e5;
  position: relative;
}

.c16 {
  margin: 0 0 1px 0;
}

.c17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
}

.c19 {
  margin-right: 5px;
}

.c21 {
  word-break: break-all;
  min-width: 100px;
}

.c29 {
  font-size: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  padding-left: 8px;
  padding-right: 8px;
  padding-bottom: 2px;
  padding-top: 2px;
  border-left: 1px solid #f3f3f3;
  border-right: 1px solid #e5e5e5;
  cursor: pointer;
  background-color: #f3f3f3;
  border-bottom: 1px solid #f3f3f3;
  margin-bottom: -2px;
  border-top: 2px solid #11ab51;
}

.c29 :first-child {
  border-left: 1px solid #e5e5e5;
}

.c30 {
  font-size: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  padding-left: 8px;
  padding-right: 8px;
  padding-bottom: 2px;
  padding-top: 2px;
  border-left: 1px solid #fff;
  border-right: 1px solid #e5e5e5;
  cursor: pointer;
  border-top: 2px solid #fff;
}

.c30 :hover {
  border-top: 2px solid #e5e5e5;
}

.c30 :first-child {
  border-left: 1px solid #fff;
}

.c27 {
  border-bottom: 2px solid #11ab51;
  margin-top: 30px;
  margin-bottom: 15px;
}

.c34 {
  border: 0;
  border-spacing: 0px;
  font-size: 12px;
  text-align: left;
  table-layout: auto;
}

.c44 {
  border: 0;
  border-spacing: 0px;
  font-size: 12px;
  text-align: left;
  table-layout: auto;
  width: 100%;
}

.c43>*:not(:last-child)::after {
  content: '•';
  margin-left: 5px;
}

.c35 td {
  padding: 4px 4px 4px 0;
}

.c35 tr td:first-child {
  padding-right: 5px;
}

.c24 {
  border-spacing: 0px;
  color: #7F7F7F;
  font-size: 10px;
}

.c24 :nth-child(even) {
  margin-left: 3px;
}

.c24 :nth-child(odd) {
  margin-left: 30px;
}

.c36 {
  width: 10%;
}

.c37 {
  width: 90%;
}

.c32 {
  font-size: 0.7em;
}

.c39 {
  height: 13px;
  box-sizing: content-box;
  display: inline-block;
  width: 100px;
  background: #4C4C4C;
  vertical-align: middle;
  text-align: center;
}

.c41 {
  z-index: 1;
  font-weight: bold;
  color: #fff;
  font-size: 9px;
  margin: 0;
  position: relative;
  top: -13px;
  padding-top: 1px;
}

.c40 {
  height: 13px;
  width: 100%;
  background: #4f91c7;
}

.c42 {
  white-space: nowrap;
}

.c38:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c12 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-right: 0px;
}

.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: absolute;
  font-size: 10px;
  background-color: red;
  font-weight: bold;
  border-radius: 10px;
  min-width: 10px;
  padding: 3px 5px;
  z-index: 1;
  background-color: #11ab51;
  color: #fff;
  bottom: -8px;
  right: 0px;
}

@media print {
  .c7 {
    display: none;
  }
}

@media print {
  .c34 {
    border-collapse: collapse;
  }
}

@media print {
  .c44 {
    border-collapse: collapse;
  }
}

@media print {
  .c39 {
    background: none;
    border: 0;
  }
}

@media print {
  .c41 {
    color: black;
  }
}

@media print {
  .c40 {
    background: none;
  }
}

<div
  class="c0"
>
  <div
    class="c1 toolbar"
  >
    <div
      class="c2 c3"
    >
      <div
        class="c2 c4"
        margin="10px"
      >
        <div
          class="c2 c3"
        >
          <div
            class="c5 c6"
            margin="5px"
          >
            <a
              href="test/en/compliance-and-special-scans.html#configuring-and-managing-audits"
              rel="noopener noreferrer"
              target="_blank"
            >
              <span
                class="c7 c8"
                data-testid="svg-icon"
                iconsize="small"
                title="Help: Audits"
              >
                <svg
                  title="Help: Audits"
                >
                  help.svg
                </svg>
              </span>
            </a>
            <a
              class="c9"
              href="/audits"
            >
              <span
                class="c7 c8"
                data-testid="svg-icon"
                iconsize="small"
                title="Audit List"
              >
                <svg
                  title="Audit List"
                >
                  list.svg
                </svg>
              </span>
            </a>
            <span
              class="c7 c8"
              data-testid="svg-icon"
              iconsize="small"
              title="This is an Alterable Audit. Reports may not relate to current Policy or Target!"
            >
              <svg
                title="This is an Alterable Audit. Reports may not relate to current Policy or Target!"
              >
                alterable.svg
              </svg>
            </span>
          </div>
        </div>
        <div
          class="c2 c3"
        >
          <div
            class="c2 c6"
            margin="5px"
          >
            <span
              class="c7 c10 c8"
              data-testid="svg-icon"
              iconsize="small"
              title="Clone Audit"
            >
              <svg
                title="Clone Audit"
              >
                clone.svg
              </svg>
            </span>
            <span
              class="c7 c10 c8"
              data-testid="svg-icon"
              iconsize="small"
              title="Edit Audit"
            >
              <svg
                title="Edit Audit"
              >
                edit.svg
              </svg>
            </span>
            <span
              class="c7 c10 c8"
              data-testid="svg-icon"
              iconsize="small"
              title="Move Audit to trashcan"
            >
              <svg
                title="Move Audit to trashcan"
              >
                trashcan.svg
              </svg>
            </span>
            <span
              class="c7 c10 c8"
              data-testid="svg-icon"
              iconsize="small"
              title="Export Audit as XML"
            >
              <svg
                title="Export Audit as XML"
              >
                export.svg
              </svg>
            </span>
          </div>
        </div>
        <div
          class="c2 c3"
        >
          <div
            class="c2 c6"
            margin="5px"
          >
            <span
              class="c7 c10 c8"
              data-testid="svg-icon"
              iconsize="small"
              title="Start"
            >
              <svg
                title="Start"
              >
                start.svg
              </svg>
            </span>
            <span
              alt="Resume"
              class="c7 c11 c8"
              data-testid="svg-icon"
              iconsize="small"
              title="Audit is not stopped"
            >
              <svg
                title="Audit is not stopped"
              >
                resume.svg
              </svg>
            </span>
          </div>
        </div>
        <div
          class="c2 c3"
        >
          <div
            class="c2 c4"
            margin="10px"
          >
            <div
              class="c2 c3"
            >
              <div
                class="c2 c6"
                margin="5px"
              >
                <a
                  class="c9"
                  data-testid="details-link"
                  href="/report/1234"
                  title="Last Report for Audit foo from 07/30/2019"
                >
                  <span
                    class="c7 c8"
                    data-testid="svg-icon"
                    iconsize="small"
                  >
                    <svg>
                      report.svg
                    </svg>
                  </span>
                </a>
                <a
                  class="c9"
                  href="/reports?filter=task_id%3D12345"
                  title="Total Reports for Audit foo"
                >
                  <div
                    class="c12"
                    margin="0"
                  >
                    <span
                      class="c7 c8"
                      data-testid="svg-icon"
                      iconsize="small"
                    >
                      <svg>
                        report.svg
                      </svg>
                    </span>
                    <span
                      class="c13"
                      data-testid="badge-icon"
                      margin="0"
                    >
                      1
                    </span>
                  </div>
                </a>
              </div>
            </div>
            <a
              class="c9"
              href="/results?filter=task_id%3D12345"
              title="Results for Audit foo"
            >
              <div
                class="c12"
                margin="0"
              >
                <span
                  class="c7 c8"
                  data-testid="svg-icon"
                  iconsize="small"
                >
                  <svg>
                    result.svg
                  </svg>
                </span>
                <span
                  class="c13"
                  data-testid="badge-icon"
                  margin="0"
                >
                  1
                </span>
              </div>
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
  <section
    class="entity-section"
  >
    <div
      class="c14 c15 section-header"
    >
      <h2
        class="c16 c17"
      >
        <div
          class="c18 c19"
        >
          <span
            class="c7 c20"
            data-testid="svg-icon"
          >
            <svg>
              audit.svg
            </svg>
          </span>
        </div>
        <div
          class="c18 c21"
        >
          Audit: foo
        </div>
      </h2>
      <div
        class="c22"
      >
        <div
          class="c23"
        >
          <div
            class="c2 c24"
          >
            <div>
              ID:
            </div>
            <div>
              12345
            </div>
            <div>
              Created:
            </div>
            <div>
              Tue, Jul 16, 2019 8:31 AM CEST
            </div>
            <div>
              Modified:
            </div>
            <div>
              Tue, Jul 16, 2019 8:44 AM CEST
            </div>
            <div>
              Owner:
            </div>
            <span>
              admin
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c25"
    >
      <div
        class="c26 c27"
      >
        <div
          class="c28"
        >
          <div
            class="c29"
          >
            Information
          </div>
          <div
            class="c30"
          >
            <div
              class="c31"
            >
              <span>
                Permissions
              </span>
              <span
                class="c32"
              >
                (
                <i>
                  0
                </i>
                )
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="c33"
      >
        <table
          class="c34 c35"
        >
          <colgroup>
            <col
              class="c36"
              width="10%"
            />
            <col
              class="c37"
              width="90%"
            />
          </colgroup>
          <tbody
            class=""
          >
            <tr>
              <td>
                <div
                  class="c33"
                >
                  Name
                </div>
              </td>
              <td>
                <div
                  class="c33"
                >
                  foo
                </div>
              </td>
            </tr>
            <tr>
              <td>
                <div
                  class="c33"
                >
                  Comment
                </div>
              </td>
              <td>
                <div
                  class="c33"
                >
                  bar
                </div>
              </td>
            </tr>
            <tr>
              <td>
                <div
                  class="c33"
                >
                  Alterable
                </div>
              </td>
              <td>
                <div
                  class="c33"
                >
                  Yes
                </div>
              </td>
            </tr>
            <tr>
              <td>
                <div
                  class="c33"
                >
                  Status
                </div>
              </td>
              <td>
                <div
                  class="c33"
                >
                  <a
                    class="c9 c38"
                    data-testid="details-link"
                    href="/report/1234"
                  >
                    <div
                      boxbackground="#4C4C4C"
                      class="c39"
                      data-testid="progressbar-box"
                      title="Done"
                    >
                      <div
                        background="low"
                        class="c40"
                        data-testid="progress"
                        progress="100"
                      />
                      <div
                        class="c41"
                      >
                        <span
                          class="c42"
                        >
                          Done
                        </span>
                      </div>
                    </div>
                  </a>
                </div>
              </td>
            </tr>
          </tbody>
        </table>
        <div
          class="c25"
        >
          <div
            class="c33"
          >
            <h2>
              Target
            </h2>
            <div>
              <a
                class="c9"
                data-testid="details-link"
                href="/target/5678"
              >
                target1
              </a>
            </div>
          </div>
          <div
            class="c33"
          >
            <h2>
              Alerts
            </h2>
            <div>
              <div
                class="c2 c3"
              >
                <div
                  class="c2 c6 c43"
                  margin="5px"
                >
                  <span>
                    <a
                      class="c9"
                      data-testid="details-link"
                      href="/alert/91011"
                    >
                      alert1
                    </a>
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div
            class="c33"
          >
            <h2>
              Scanner
            </h2>
            <div>
              <table
                class="c44 c35"
              >
                <colgroup>
                  <col
                    class="c36"
                    width="10%"
                  />
                  <col
                    class="c37"
                    width="90%"
                  />
                </colgroup>
                <tbody
                  class=""
                >
                  <tr>
                    <td>
                      <div
                        class="c33"
                      >
                        Name
                      </div>
                    </td>
                    <td>
                      <div
                        class="c33"
                      >
                        <span>
                          <a
                            class="c9"
                            data-testid="details-link"
                            href="/scanner/1516"
                          >
                            scanner1
                          </a>
                        </span>
                      </div>
                    </td>
                  </tr>
                  <tr>
                    <td>
                      <div
                        class="c33"
                      >
                        Type
                      </div>
                    </td>
                    <td>
                      <div
                        class="c33"
                      >
                        OpenVAS Scanner
                      </div>
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
          <div
            class="c33"
          >
            <h2>
              Assets
            </h2>
            <div>
              <table
                class="c44 c35"
              >
                <colgroup>
                  <col
                    class="c36"
                    width="10%"
                  />
                  <col
                    class="c37"
                    width="90%"
                  />
                </colgroup>
                <tbody
                  class=""
                >
                  <tr>
                    <td>
                      <div
                        class="c33"
                      >
                        Add to Assets
                      </div>
                    </td>
                    <td>
                      <div
                        class="c33"
                      >
                        Yes
                      </div>
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
          <div
            class="c33"
          >
            <h2>
              Scan
            </h2>
            <div>
              <table
                class="c44 c35"
              >
                <colgroup>
                  <col
                    class="c36"
                    width="10%"
                  />
                  <col
                    class="c37"
                    width="90%"
                  />
                </colgroup>
                <tbody
                  class=""
                >
                  <tr>
                    <td>
                      <div
                        class="c33"
                      >
                        Duration of last Scan
                      </div>
                    </td>
                    <td>
                      <div
                        class="c33"
                      >
                        2 minutes
                      </div>
                    </td>
                  </tr>
                  <tr>
                    <td>
                      <div
                        class="c33"
                      >
                        Auto delete Reports
                      </div>
                    </td>
                    <td>
                      <div
                        class="c33"
                      >
                        Do not automatically delete reports
                      </div>
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`Audit ToolBarIcons tests should render 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: start;
  justify-content: start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c7 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c2 {
  margin-left: -10px;
}

.c2>* {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c2>* {
  margin-left: 10px;
}

.c4 {
  margin-left: -5px;
}

.c4>* {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c4>* {
  margin-left: 5px;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c8 {
  cursor: pointer;
}

.c9 svg path {
  fill: #bfbfbf;
}

.c6 {
  height: 16px;
  width: 16px;
  line-height: 16px;
}

.c6 * {
  height: inherit;
  width: inherit;
}

.c10 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-right: 0px;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: absolute;
  font-size: 10px;
  background-color: red;
  font-weight: bold;
  border-radius: 10px;
  min-width: 10px;
  padding: 3px 5px;
  z-index: 1;
  background-color: #11ab51;
  color: #fff;
  bottom: -8px;
  right: 0px;
}

@media print {
  .c5 {
    display: none;
  }
}

<div
  class="c0 c1"
>
  <div
    class="c0 c2"
    margin="10px"
  >
    <div
      class="c0 c1"
    >
      <div
        class="c3 c4"
        margin="5px"
      >
        <a
          href="test/en/compliance-and-special-scans.html#configuring-and-managing-audits"
          rel="noopener noreferrer"
          target="_blank"
        >
          <span
            class="c5 c6"
            data-testid="svg-icon"
            title="Help: Audits"
          >
            <svg
              title="Help: Audits"
            >
              help.svg
            </svg>
          </span>
        </a>
        <a
          class="c7"
          href="/audits"
        >
          <span
            class="c5 c6"
            data-testid="svg-icon"
            title="Audit List"
          >
            <svg
              title="Audit List"
            >
              list.svg
            </svg>
          </span>
        </a>
        <span
          class="c5 c6"
          data-testid="svg-icon"
          title="This is an Alterable Audit. Reports may not relate to current Policy or Target!"
        >
          <svg
            title="This is an Alterable Audit. Reports may not relate to current Policy or Target!"
          >
            alterable.svg
          </svg>
        </span>
      </div>
    </div>
    <div
      class="c0 c1"
    >
      <div
        class="c0 c4"
        margin="5px"
      >
        <span
          class="c5 c8 c6"
          data-testid="svg-icon"
          title="Clone Audit"
        >
          <svg
            title="Clone Audit"
          >
            clone.svg
          </svg>
        </span>
        <span
          class="c5 c8 c6"
          data-testid="svg-icon"
          title="Edit Audit"
        >
          <svg
            title="Edit Audit"
          >
            edit.svg
          </svg>
        </span>
        <span
          class="c5 c8 c6"
          data-testid="svg-icon"
          title="Move Audit to trashcan"
        >
          <svg
            title="Move Audit to trashcan"
          >
            trashcan.svg
          </svg>
        </span>
        <span
          class="c5 c8 c6"
          data-testid="svg-icon"
          title="Export Audit as XML"
        >
          <svg
            title="Export Audit as XML"
          >
            export.svg
          </svg>
        </span>
      </div>
    </div>
    <div
      class="c0 c1"
    >
      <div
        class="c0 c4"
        margin="5px"
      >
        <span
          class="c5 c8 c6"
          data-testid="svg-icon"
          title="Start"
        >
          <svg
            title="Start"
          >
            start.svg
          </svg>
        </span>
        <span
          alt="Resume"
          class="c5 c9 c6"
          data-testid="svg-icon"
          title="Audit is not stopped"
        >
          <svg
            title="Audit is not stopped"
          >
            resume.svg
          </svg>
        </span>
      </div>
    </div>
    <div
      class="c0 c1"
    >
      <div
        class="c0 c2"
        margin="10px"
      >
        <div
          class="c0 c1"
        >
          <div
            class="c0 c4"
            margin="5px"
          >
            <a
              class="c7"
              data-testid="details-link"
              href="/report/1234"
              title="Last Report for Audit foo from 07/30/2019"
            >
              <span
                class="c5 c6"
                data-testid="svg-icon"
              >
                <svg>
                  report.svg
                </svg>
              </span>
            </a>
            <a
              class="c7"
              href="/reports?filter=task_id%3D12345"
              title="Total Reports for Audit foo"
            >
              <div
                class="c10"
                margin="0"
              >
                <span
                  class="c5 c6"
                  data-testid="svg-icon"
                >
                  <svg>
                    report.svg
                  </svg>
                </span>
                <span
                  class="c11"
                  data-testid="badge-icon"
                  margin="0"
                >
                  1
                </span>
              </div>
            </a>
          </div>
        </div>
        <a
          class="c7"
          href="/results?filter=task_id%3D12345"
          title="Results for Audit foo"
        >
          <div
            class="c10"
            margin="0"
          >
            <span
              class="c5 c6"
              data-testid="svg-icon"
            >
              <svg>
                result.svg
              </svg>
            </span>
            <span
              class="c11"
              data-testid="badge-icon"
              margin="0"
            >
              1
            </span>
          </div>
        </a>
      </div>
    </div>
  </div>
</div>
`;
